--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha -- ./test/user.test.js",
     "start": "nodemon ./src/server.js"
   },
   "author": "",
@@ -18,6 +18,7 @@
     "express": "^4.18.1",
     "express-handlebars": "^5.3.3",
     "express-session": "^1.17.3",
+    "faker": "^5.5.3",
     "handlebars": "^4.7.7",
     "mongoose": "^6.5.2",
     "multer": "^1.4.5-lts.1",
@@ -27,5 +28,10 @@
     "passport-local": "^1.0.0",
     "twilio": "^3.82.1",
     "winston": "^3.8.2"
+  },
+  "devDependencies": {
+    "chai": "^4.3.6",
+    "mocha": "^10.0.0",
+    "supertest": "^6.3.0"
   }
 }
